--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                     <option value="Web">Web</option>
                     <option value="Mobile">Mobile</option>
                 </select>
+            </div>
+            <div class="form-group">
                 <button class="btn" id="save-task">Add Task</button>
             </div>
         </form>
