--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
             <h2 class="list-title">Tasks To Do</h2>
             <ul class="task-list" id="tasks-to-do"></ul>
         </section>
+        <!--Tasks Completed-->
+        <section class="task-list-wrapper">
+            <h2 class="list-title"> Tasks In Progress</h2>
+            <ul class="task-list" id="tasks-in-progress"></ul>
+        </section>
+
+        <!--Tasks Completed-->
+        <section class="task-list-wrapper">
+            <h2 class="list-title">Tasks Completed</h2>
+            <ul class="task-list" id="tasks-completed"></ul>
+        </section>
 </main>
 <script src="./assets/javascript/script.js"></script>
 <footer>
@@ -40,3 +51,12 @@
 </footer>
 </body>
 </html>
+
+<!--What to do-->
+<!--
+    *Create two seperate statuses("Tasks In Progress and Tasks Completed")
+    *Change the status dropdown to either three columns
+    *Have an edit and delete button
+    *Add a "Save Tasks Button" to update its information
+    *Add a delete feature for tasks
+-->
